Closes-Bug:#1610578 - Overlap of labels in the charts & Reduced space between Donut Charts

--- a/webroot/monitor/infrastructure/common/ui/css/monitor.infra.css
+++ b/webroot/monitor/infrastructure/common/ui/css/monitor.infra.css
@@ -33,4 +33,8 @@
 #analytics-nodes-chart .chartMargin{
     margin:0 10px 0 10px !important;
 }
+#config-nodes-donutchart-one .nvd3-svg{
+    width:211px;
+    margin-left:40%;
+ }
 /******Config Node chart and Analytics node chart Ends here****/
